:sparkles: [#211] added publicatiestatus filter to the Topics api and added a test for it, also renamed the TopicApiTestsCase from PublicationApiTestCase.
